src/main/java/com/example/ticket/api/error/UnauthorizedException.java
package com.example.ticket.api.error;

public class UnauthorizedException extends RuntimeException {
    public UnauthorizedException(String message) {
        super(message);
    }
}
